# lsdb-server

./: Cargo.toml  LICENSE  README.md
.github/worflows/: codecov.yml
.github/workflows/: build.yml
benchmark/: simple_server.py  test.ipynb
src/: aux.rs  bin.rs  lib.rs  main.rs  mod.rs  parquet.rs  routes.rs
src/loaders/: mod.rs  parquet.rs
src/loaders/parquet/: helpers.rs  mod.rs  parquet.rs  parse_params.rs
src/loaders/parsers/: helpers.rs  mod.rs  parse_params.rs
src/parser/: parser.rs
src/parsers/: helpers.rs  mod.rs  parse_filters.rs
tests/: parquet.rs  parser.rs  parsers.rs
tests/data/: Npix=754.parquet
