[package]
name = "lsdb-server"
version = "0.1.0"
edition = "2021"
authors = [" schwarzam gustavo.b.schwarz@gmail.com "]

include = ["/src", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lsdb_server"
path = "src/lib.rs"

[[bin]]
name = "lsdb_server"
path = "src/bin.rs"

[dependencies]
futures-util = "0.3.30"
arrow = "52.0.0"
parquet = { version = "52.0.0", features = ["arrow", "async"] }
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
hyper = { version="1.3.1", features = ["full"] }
tower = "0.4.13"
bytes = "1.6.0"
regex = "1.10.4"